--- a/micronaut-cli.yml
+++ b/micronaut-cli.yml
@@ -3,4 +3,4 @@ defaultPackage: br.com.zup.edu
 testFramework: junit
 sourceLanguage: kotlin
 buildTool: gradle
-features: [annotation-api, app-name, gradle, grpc, junit, kotlin, kotlin-application, logback, readme, shade, yaml]
+features: [app-name, data, data-jpa, gradle, http-client, java, java-application, jdbc-hikari, junit, logback, netty-server, postgres, readme, shade, testcontainers, yaml]
