--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,23 @@
 micronaut:
   application:
     name: keyManagerGrpc
+
+datasources:
+  default:
+    url: ${DB_URL:`jdbc:postgresql://localhost:5432/postgres?currentSchema=pix`}
+    driverClassName: org.postgresql.Driver
+    username: ${DB_USER:`postgres`}
+    password: ${DB_PASSWORD:`root`}
+    dialect: POSTGRES
+
+jpa.default.properties.hibernate.hbm2ddl.auto: create
+jpa.default.properties.hibernate.show_sql: true
+jpa.default.properties.hibernate.format_sql: true
+
+erp:
+  itau-url: ${ITAU_URL:`http://localhost:9091`}
+
+logger:
+  levels:
+    io.micronaut.transaction: DEBUG
+
